--- a/diary_app/requirements.txt
+++ b/diary_app/requirements.txt
@@ -3,3 +3,8 @@ flask==2.3.2
 requests==2.31.0
 numpy==1.24.3
 pandas==1.4.0
+transformers==4.31.0
+werkzeug==2.3.6
+
+--find-links https://download.pytorch.org/whl/torch_stable.html
+torch==1.7.1+cpu
