--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ flask==2.3.2
 requests==2.31.0
 numpy==1.24.3
 pandas==1.4.0
-transformers==4.30.0
+transformers==4.31.0
 werkzeug==2.3.6
 
 --find-links https://download.pytorch.org/whl/torch_stable.html
-torch==2.0.1+rocm5.3
+torch==1.9.0+cpu
