--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,12 @@ pandas==1.4.0
 transformers==4.31.0
 werkzeug==2.3.6
 
--f https://download.pytorch.org/whl/torch_stable.html
+--find-links https://download.pytorch.org/whl/torch_stable.html
 torch==1.11.0+cpu
+
+
+
+
+
+
+
